--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Prijavi se</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2020 Daniel Mihaljevic Livno</p>
+      <p class="mt-5 mb-3 text-muted">&copy; 2020 Jurica Vukoja Livno</p>
     </form>
   </body>
 </html>
